Add java option to entrypoint script