@@ -8,4 +8,6 @@ function join() {
 
 CUSTOM_LIBS=$(join ':' libs/*)
 
-java -Duser.dir=/cms -cp cms-oss-server.jar:"$CUSTOM_LIBS" com.gentics.contentnode.server.OSSRunner
+java -Duser.dir=/cms -cp cms-oss-server.jar:"$CUSTOM_LIBS" \
+  --add-opens=java.base/java.lang=ALL-UNNAMED \
+  com.gentics.contentnode.server.OSSRunner
